--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error title</title>
+    <title>Page Not Found</title>
 </head>
 <body>
-    <p>Error page</p>
+<h1>There's no page here!</h1>
+<p>
+    We're sorry, the page you are looking for does not exist!
+    Go back to <a href="/">home page</a>.
+</p>
 </body>
 </html>
